traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:31: error: 'while' expected but '}' found.
} 
^