traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
  var cpt=0
  ecritMessage(cpt)
  diag+=1
  cpt+=1
  do{
  	var x=0
  	var y=diag
  	while (x<diag+1){
    	setPos(x,y)
    	ecritMessage(cpt)
    	x+=1
    	y-=1
    	cpt+=1  
 	 } 
   diag+=1  
  }while (getX()!=6)
  do{
    var x=diag
  	var y=1
  	while (y<diag+1){
    	setPos(x,y)
    	ecritMessage(cpt)
    	x-=1
    	y+=1
    	cpt+=1  
 	 } 
   diag+=1  
  }
  
}